<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
            android:title="@string/pref_main_category_title">

        <ListPreference
		        android:dialogTitle="@string/pref_x_scale_title"
		        android:key="pref_x_scale"
		        android:summary=""
		        android:title="@string/pref_x_scale_title"
		        android:entries="@array/pref_x_scales"
		        android:entryValues="@array/pref_x_scales"
		        android:defaultValue="@string/pref_default_x_scale"/>

        <ListPreference
		        android:dialogTitle="@string/pref_font_size_title"
		        android:key="pref_font_size"
		        android:summary=""
		        android:title="@string/pref_font_size_title"
		        android:entries="@array/pref_font_size"
		        android:entryValues="@array/pref_font_size"
		        android:defaultValue="@string/pref_default_font_size"/>

    </PreferenceCategory>

</PreferenceScreen>
